src/timestep/infra/stacks/kubernetes_config/constructs/ingress_controller/sample/example-service1.yaml
kind: Service
apiVersion: v1
metadata:
  name: example1
spec:
  type: ClusterIP
  selector:
    app: example1
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
